# NanoTrade

./: .gitignore  CMakeLists.txt  LICENSE  README.md
backtest/: CMakeLists.txt  backtest_main.cpp  binance_aggtrades_replay.cpp  binance_aggtrades_replay.h  equity_recorder.cpp  equity_recorder.h  fill_simulator.cpp  fill_simulator.h  lobster_replay.cpp  lobster_replay.h
benchmarks/: latency_benchmark.cpp
common/: latency_stats.h  logging.h  perf_utils.h  types.h
exchange/: CMakeLists.txt
exchange/matcher/: matching_engine.cpp  matching_engine.h  me_order_book.cpp  me_order_book.h
notebooks/: backtest_binance.ipynb  backtest_lobster.ipynb  latency_benchmark_analysis.ipynb
scripts/: download_binance.sh  download_lobster.sh
trading/market_data/: market_data_consumer.cpp  market_data_consumer.h
trading/strategy/: market_order_book.cpp  market_order_book.h  trade_engine.cpp  trade_engine.h
